--- a/app/assets/stylesheets/public/customers.scss
+++ b/app/assets/stylesheets/public/customers.scss
@@ -54,7 +54,30 @@
     }
   }
   .customer-index-container{
+    display: flex;
+    flex-wrap: wrap;
+    width: 90%;
+    margin: 0 auto;
     justify-content: center;
+    .img-container{
+      width: 350px;
+      height: 300px;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 10px;
+      }
+    }
+    .text-container{
+      width: 350px;
+      margin-bottom: 5px;
+      .customer-index-link{
+        position: absolute;
+        left: 70px;
+        bottom: 5px;
+      }
+    }
   }
 }
 
