--- a/app/assets/stylesheets/public/customers.scss
+++ b/app/assets/stylesheets/public/customers.scss
@@ -147,8 +147,8 @@
 }
 
 .customer-edit-title{
-  width: 100%;
-  margin-left: 100px;
+  width: 90%;
+  text-align: center;
 }
 
 .customer-edit-container{
