--- a/app/views/public/communities/index.html.haml
+++ b/app/views/public/communities/index.html.haml
@@ -3,7 +3,8 @@
 %h2 コミュニティ一覧
 .community-index-container
   - @communities.each do |community|
-    .card
+    - @owner = Customer.find_by(id: community.owner_id)
+    .card.mb-5
       = link_to public_community_path(community), data: { 'turbolinks': false } do
         .img-container
           - if community.community_image.present?
@@ -16,17 +17,27 @@
         %h6.card-subtitle
           参加人数
           = community.customers.count.to_s + "人"
+          %hr
+          [コミュニティオーナー]
+          %br
+          .community-owner-img
+            - if @owner.profile_image.present?
+              = image_tag @owner.profile_image
+            - else
+              = image_tag 'no_image'
+            .owner-name
+              = @owner.name
         %hr
         .community-show-link-area
           = link_to "コミュニティ詳細へ", public_community_path(community), class: "btn-info community-show-link", data: { 'turbolinks': false }
         %hr
         .community-action-btn
           - if community.owner_id == current_customer.id
-            = link_to '編集する', edit_public_community_path(community), class: "btn btn-sm btn-success"
+            = link_to '編集する', edit_public_community_path(community), class: "btn btn-success"
           - elsif community.customers.include?(current_customer)
-            = link_to 'コミュニティを抜ける', public_community_leave_path(community), method: :delete, class: "btn btn-sm btn-danger", data: { confirm: 'こちらのコミュニティを抜けます。よろしいですか？' }
+            = link_to 'コミュニティを退会', public_community_leave_path(community), method: :delete, class: "btn btn-danger", data: { confirm: 'こちらのコミュニティを抜けます。よろしいですか？' }
           -else
-            = link_to 'コミュニティに参加する', public_community_join_path(community), class: "btn btn-sm btn-success", data: { confirm: 'こちらのコミュニティに参加します。よろしいですか？' }
+            = link_to 'コミュニティに参加', public_community_join_path(community), class: "btn btn-success", data: { confirm: 'こちらのコミュニティに参加します。よろしいですか？' }
         %hr
         %p.card-text
           [活動場所]
