--- a/app/assets/stylesheets/public/communities.scss
+++ b/app/assets/stylesheets/public/communities.scss
@@ -1,5 +1,12 @@
-h2{
+.community-index-head-title{
   text-align: center;
+  padding: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .community-index-create-btn{
+    margin-left: 20px;
+  }
 }
 
 .community-index-container{
@@ -20,6 +27,10 @@ h2{
   .text-container{
     width: 255px;
     margin-bottom: 5px;
+    .card-title{
+      min-height: 60px;
+      text-align: center;
+    }
     .community-owner-img{
       display: flex;
       justify-content: center;
@@ -204,6 +215,43 @@ h2{
     }
   }
 }
+
+.community-new-title{
+  width: 90%;
+  text-align: center;
+}
+
+.community-new-container{
+  width: 90%;
+  margin: 0 auto;
+  .community-new-table{
+    border: thick double lightblue;
+    .new-img{
+      width: 300px;
+      object-fit: cover;
+      border-radius: 10px;
+      padding: 5px;
+    }
+  }
+  .community-new-btn{
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    display: block;
+    width: 200px;
+    margin-left: auto;
+    text-align: center;
+    font-size: 20px;
+    color: white;
+    border-radius: 10px;
+  }
+}
+
+input[type="text"] {
+  width: 90%;
+  height: 40px;
+}
+
 
 .community-edit-title{
   width: 90%;
