--- a/app/assets/stylesheets/public/communities.scss
+++ b/app/assets/stylesheets/public/communities.scss
@@ -362,3 +362,39 @@ input[type="text"] {
     }
   } 
 }
+
+.community-permits-container{
+  text-align: center;
+  margin: 0 auto;
+  width: 90%;
+  .community-permits-table{
+    border: thick double lightblue;
+    .permit-table-body{
+      font-size: 20px;
+      line-height: 2;
+      .img-container{
+        margin: 0 auto;
+        width: 50px;
+        height: 50px;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          border-radius: 10px;
+        }
+      }
+      .customer-permit-btn{
+        margin: 0 auto;
+        margin-bottom: 5px;
+        text-align: center;
+        display: inline-block;
+        width: 200px;
+        height: 40px;
+        line-height: 30px;
+        font-size: 20px;
+        color: white;
+        border-radius: 10px;
+      }
+    }
+  }
+}
