--- a/app/assets/stylesheets/public/communities.scss
+++ b/app/assets/stylesheets/public/communities.scss
@@ -49,6 +49,7 @@
         border-radius: 10px;
         padding: 10px;
         margin-top: 10px;
+        text-decoration: none;
       }
     }
     .community-action-btn{
