fix/community-chat-room

--- a/app/views/public/chat_rooms/community_show.html.haml
+++ b/app/views/public/chat_rooms/community_show.html.haml
@@ -18,7 +18,7 @@
                 - else
                   = image_tag 'no_image', class: "icon_mini"
                 %strong.do-chat
-                  = customer.name + 'さんの詳細ページ🎵'
+                  = customer.name + 'さん🎵'
             %hr
 
 
